tests/expectations/compiler/core/algorithms/pedersen64_hash_to_field.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:26:24
     |
  26 |         let a: field = Pedersen64::hash_to_field(bool_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:27:24
     |
  27 |         let b: field = Pedersen64::hash_to_field(bool_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:24
     |
  28 |         let c: field = Pedersen64::hash_to_field(bool_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:24
     |
  29 |         let d: field = Pedersen64::hash_to_field(bool_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:24
     |
  30 |         let e: field = Pedersen64::hash_to_field(i8_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:24
     |
  31 |         let f: field = Pedersen64::hash_to_field(i16_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:24
     |
  32 |         let g: field = Pedersen64::hash_to_field(i32_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:24
     |
  33 |         let i: field = Pedersen64::hash_to_field(u8_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:24
     |
  34 |         let j: field = Pedersen64::hash_to_field(u16_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:24
     |
  35 |         let k: field = Pedersen64::hash_to_field(u32_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:24
     |
  36 |         let m: field = Pedersen64::hash_to_field(bool_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:24
     |
  38 |         let n: field = Pedersen64::hash_to_field(bool_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
